--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.75.0",
     "chocolatey": "^0.0.1",
     "fuse.js": "^7.0.0",
     "next": "^15.5.4",
